# stowr-cli

./: COMPLETE_DEMO.md  Cargo.toml  GLOB_EXAMPLES.md  IMPLEMENTATION.md  RELEASE_NOTES.md  file_list.txt  readme.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: rust.yml
.stowr/: config.json
.stowr/storage/: 4ebc3165-7e97-4695-bf0d-6a1b4fdf3e2f.zst  index.json
demo/: file_list.txt  glob_test.txt  move_test.txt  owe_test.txt  test_exclude.txt  test_file.txt  test_glob.ps1  test_new_features.ps1  test_stowr.ps1
src/: commands.rs  main.rs  tests.rs
